部分文件存储内容整理

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -9,6 +9,11 @@ body {
   border: 0;
   padding: 0;
 }
+.content{
+  height: 100%;
+  position: relative;
+  padding: 20px;
+}
 .el-table th.is-leaf {
   background: #f5f7fa;
 }
